--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Telegram gives you option to clear all recent emojis and stickers but never GIFs! Well, we have it now.",
   "main": "index.js",
   "scripts": {
-    "start": "node main.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
